Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 4.8.3, 5.0.0 Beta 2
-
Component/s: GUI: Font handling
-
Labels:None
-
Environment:Mac OsX
-
Commits:qtbase/3c09f6bc9aee0c97427fe8da6efdc73b4ac473aa, qt/717e36037cf246aa201c0aaf15a5dcbd7883f159
Description
NOTE : The font for testing "Hiraagino" is Japanese system font on OS X.
http://en.wikipedia.org/wiki/List_of_CJK_fonts#Japanese_2
Hiragino Kaku Gothic (ヒラギノ角ゴ) and Hiragino Maru Gothic (ヒラギノ丸ゴ) – default Japanese system font on Mac OS X.
English Name : "Hiragino Kaku Gothic Pro". (See hiragino_english.png)
Japanese Name : "ヒラギノ角ゴ Pro" (See hiragino_japanese.png)
Steps to reproduce)
Unexpected Case)
1) Change order of "日本語" (it means Japanese) to top most (See language_order_japanese.png)
2) Compile and execute attached sample.
3) Select "ヒラギノ角ゴ Pro" (See select_hiragino_japanese.png) and press OK.
Result)
% ./fontdialog.app/Contents/MacOS/fontdialog
QFontDialog returned : "Lucida Grande"
It is unexpected shown above and an expected result is as follows
QFontDialog returned : "Hiragino Kaku Gothic Pro"
Expected Case in English)
1) Change order of "English" to top most (See language_order_japanese.png)
2) Compile and execute attached sample.
3) Select "Hiragino Kaku Gothic Pro" (See select_hiragino_english.png) and press OK.
Result)
% ./fontdialog.app/Contents/MacOS/fontdialog
QFontDialog returned : "Hiragino Kaku Gothic Pro"
Please check the zip file for images and example application.
Attachments
Issue Links
- is required for
-
QTBUG-27426 Qt 5.0 Final release tasks
-
- Closed
-
For Gerrit Dashboard: QTBUG-27415 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
38487,3 | Mac: fix bugs for font selection in QFontDialog | master | qt/qtbase | Status: ABANDONED | -2 | 0 |
41661,1 | Mac: fix bugs for font selection in QFontDialog | stable | qt/qtbase | Status: MERGED | +2 | 0 |
42823,1 | Mac: fix bugs for font selection in QFontDialog | release | qt/qtbase | Status: MERGED | +2 | 0 |
42830,1 | Mac: fix bugs for font selection in QFontDialog | 4.8 | qt/qt | Status: MERGED | +2 | 0 |