src/gui/text/qfontdatabase.cpp
@@ -595,7 +595,7 @@ QtFontFamily *QFontDatabasePrivate::family(const QString &f, bool create)
     if (res < 0)
         pos++;
 
-    // qDebug("adding family %s at %d total=%d", f.latin1(), pos, count);
+    // qDebug() << "adding family " << f.toLatin1() << " at " << pos << " total=" << count;
     if (!(count % 8)) {
         QtFontFamily **newFamilies = (QtFontFamily **)
                    realloc(families,
